--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 .svn/
 *.class
 *.jar
+*.jar
+incAccounting/web/WEB-INF/lib/incLibraries.jar
+*.jar
 *.war
 build/
 dist/
-*/private.xml
-*.properties
