--- a/incLibraries/nbproject/private/private.properties
+++ b/incLibraries/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\dan\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Owner\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
