--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,16 @@
 .svn/
 *.class
 *.jar
-*.jar
-incAccounting/web/WEB-INF/lib/incLibraries.jar
-*.jar
 *.war
-build/
-dist/
+*.ear
+
+Documentation/nbproject/private/private.properties
+incAccounting.Model/nbproject/private/private.properties
+incAccounting/nbproject/private/private.properties
+incAccounting/web/WEB-INF/web.xml
+incGenerator/nbproject/private/private.properties
+incLibraries/nbproject/private/private.properties
+incAccounting.Model/build/
+incAccounting.Model/dist/
+incAccounting/build/
+incLibraries/build/
