--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,10 @@
 *.war
 *.ear
 
-/Documentation/nbproject/private/private.properties
-/incAccounting.Model/nbproject/private/private.properties
-/incAccounting/nbproject/private/private.properties
-/incGenerator/nbproject/private/private.properties
-/incLibraries/nbproject/private/private.properties
-/incAccounting.Model/build/
-/incAccounting.Model/dist/
-/incAccounting/build/
-/incLibraries/build/
+**/private/
+**/build/
+**/dist/
+incAccounting/incAccounting/web/WEB-INF/web.xml
+incAccounting/nbproject/private/private.properties
+incGenerator/nbproject/private/private.properties
+incLibraries/nbproject/private/private.properties
