MySQL table names inconsistent -- forcing to lower case and insensitive.  Mysql setting will need changed.
Regenrated to remove "loadAll" from row.

Updated securables to reflect new GUID since name changed.

Updated generator to treat names as lowercase.

Group can edit permissions.

Report security check.

Password reset and handling.

Exception.getMessage() == null handling.

Do not cheeck can read on Row type - it's not secured.

--- a/incGenerator/nbproject/project.properties
+++ b/incGenerator/nbproject/project.properties
@@ -32,7 +32,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.incLibraries.jar}
+    ${reference.incLibraries.jar}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
