--- a/incAccounting/nbproject/project.properties
+++ b/incAccounting/nbproject/project.properties
@@ -28,7 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.xstream-1.4.9.jar=../Documentation/Dependencies/xstream-distribution-1.4.9-bin/xstream-1.4.9/lib/xstream-1.4.9.jar
+file.reference.mysql-connector-java-5.1.42-bin.jar=C:\\Users\\dan\\Downloads\\mysql-connector-java-5.1.42\\mysql-connector-java-5.1.42\\mysql-connector-java-5.1.42-bin.jar
 includes=**
 j2ee.compile.on.save=false
 j2ee.copy.static.files.on.save=true
@@ -45,7 +45,7 @@ jar.compress=false
 javac.classpath=\
     ${reference.incAccounting_Model.jar}:\
     ${reference.incLibraries.jar}:\
-    ${file.reference.xstream-1.4.9.jar}
+    ${file.reference.mysql-connector-java-5.1.42-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
