--- a/incAccounting/nbproject/project.properties
+++ b/incAccounting/nbproject/project.properties
@@ -45,7 +45,8 @@ jar.compress=false
 javac.classpath=\
     ${reference.incAccounting_Model.jar}:\
     ${reference.incLibraries.jar}:\
-    ${file.reference.mysql-connector-java-5.1.42-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.42-bin.jar}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
