Time sheets to include "unpaid" since it is defined per pay range. Added auto to timesheet to autoatically select the times flagged as payable. Time entry list reprt fixed. Added numberToText using ICU libraries.  Incorporated on Paychecks and Payments.

--- a/incAccounting.Model/nbproject/project.properties
+++ b/incAccounting.Model/nbproject/project.properties
@@ -29,10 +29,12 @@ dist.jar=${dist.dir}/incAccounting.Model.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.icu4j-59_1.jar=..\\Documentation\\Dependencies\\icu4j-59_1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.incLibraries.jar}
+    ${reference.incLibraries.jar}:\
+    ${file.reference.icu4j-59_1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
