--- a/incLibraries/nbproject/project.properties
+++ b/incLibraries/nbproject/project.properties
@@ -30,11 +30,13 @@ dist.jar=${dist.dir}/incLibraries.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.icu4j-59_1.jar=..\\Documentation\\Dependencies\\icu4j-59_1.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
-javac.classpath=
+javac.classpath=\
+    ${file.reference.icu4j-59_1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
