--- a/incAccounting/nbproject/project.properties
+++ b/incAccounting/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.icu4j-59_1.jar=..\\Documentation\\Dependencies\\icu4j-59_1.jar
 file.reference.mysql-connector-java-5.1.42-bin.jar=C:\\Users\\dan\\Downloads\\mysql-connector-java-5.1.42\\mysql-connector-java-5.1.42\\mysql-connector-java-5.1.42-bin.jar
 includes=**
 j2ee.compile.on.save=false
@@ -46,7 +47,8 @@ javac.classpath=\
     ${reference.incAccounting_Model.jar}:\
     ${reference.incLibraries.jar}:\
     ${file.reference.mysql-connector-java-5.1.42-bin.jar}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.icu4j-59_1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
