--- a/incAccounting/web/WEB-INF/web.xml
+++ b/incAccounting/web/WEB-INF/web.xml
@@ -10,6 +10,11 @@
     <servlet>
         <servlet-name>incAccounting</servlet-name>
         <servlet-class>net.internetworkconsulting.accounting.mvc.Servlet</servlet-class>
+		<multipart-config>
+			<max-file-size>10485760</max-file-size>
+			<max-request-size>20971520</max-request-size>
+			<file-size-threshold>5242880</file-size-threshold>
+		</multipart-config>
     </servlet>
     <servlet-mapping>
         <servlet-name>incAccounting</servlet-name>
