--- a/incAccounting/nbproject/genfiles.properties
+++ b/incAccounting/nbproject/genfiles.properties
@@ -6,3 +6,4 @@ build.xml.stylesheet.CRC32=651128d4@1.77.1.1
 nbproject/build-impl.xml.data.CRC32=fe9309b4
 nbproject/build-impl.xml.script.CRC32=f6680e1d
 nbproject/build-impl.xml.stylesheet.CRC32=99ea4b56@1.77.1.1
+nbproject/jaxws-build.xml.stylesheet.CRC32=6608c2cf
