--- a/incAccounting/web/WEB-INF/web.xml
+++ b/incAccounting/web/WEB-INF/web.xml
@@ -52,6 +52,6 @@
     <env-entry>
         <env-entry-name>configEditable</env-entry-name>
         <env-entry-type>java.lang.String</env-entry-type>
-        <env-entry-value>false</env-entry-value>
+        <env-entry-value>true</env-entry-value>
     </env-entry>
 </web-app>
