--- a/incGenerator/src/net/internetworkconsulting/generator/MySQL/files.config
+++ b/incGenerator/src/net/internetworkconsulting/generator/MySQL/files.config
@@ -1,2 +1,2 @@
-row.template|%TABLE%Row.java
-interface.template|%TABLE%Interface.java
+row.template|%TABLE%Row.java|E:\Repositories\NetBeans\incAccounting\src\java\net\internetworkconsulting\accounting\data\
+interface.template|%TABLE%Interface.java|E:\Repositories\NetBeans\incAccounting\src\java\net\internetworkconsulting\accounting\data\
