--- a/incGenerator/src/net/internetworkconsulting/generator/MySQL/files.config
+++ b/incGenerator/src/net/internetworkconsulting/generator/MySQL/files.config
@@ -1,2 +1,3 @@
 row.template|%TABLE%Row.java|E:\Repositories\NetBeans\incAccounting\src\java\net\internetworkconsulting\accounting\data\
 interface.template|%TABLE%Interface.java|E:\Repositories\NetBeans\incAccounting\src\java\net\internetworkconsulting\accounting\data\
+inc.accounting.data.js|%TABLE%Row.js|E:\Repositories\NetBeans\incAccounting\web\soap\scripts\inc.accounting.data\
