Adding "list" functionality.

--- a/incGenerator/src/net/internetworkconsulting/generator/MySQL/files.config
+++ b/incGenerator/src/net/internetworkconsulting/generator/MySQL/files.config
@@ -1,3 +1,3 @@
-row.template|%TABLE%Row.java|E:\Repositories\NetBeans\incAccounting\src\java\net\internetworkconsulting\accounting\data\
-interface.template|%TABLE%Interface.java|E:\Repositories\NetBeans\incAccounting\src\java\net\internetworkconsulting\accounting\data\
-inc.accounting.data.js|%TABLE%Row.js|E:\Repositories\NetBeans\incAccounting\web\soap\scripts\inc.accounting.data\
+row.template|%TABLE%Row.java|E:\Repositories\NetBeans\incAccounting.Library\src\net\internetworkconsulting\accounting\data\
+interface.template|%TABLE%Interface.java|E:\Repositories\NetBeans\incAccounting.Library\src\net\internetworkconsulting\accounting\data\
+inc.accounting.data.js|%TABLE%Row.js|E:\Repositories\NetBeans\incAccounting.WS\web\scripts\inc.accounting.data\
