Remove company field from login page.

--- a/incAccounting.Servlet/web/WEB-INF/web.xml
+++ b/incAccounting.Servlet/web/WEB-INF/web.xml
@@ -35,6 +35,11 @@
         <env-entry-value>localhost</env-entry-value>
     </env-entry>
     <env-entry>
+        <env-entry-name>dbDatabase</env-entry-name>
+        <env-entry-type>java.lang.String</env-entry-type>
+        <env-entry-value>incllc</env-entry-value>
+    </env-entry>
+    <env-entry>
         <env-entry-name>dbUser</env-entry-name>
         <env-entry-type>java.lang.String</env-entry-type>
         <env-entry-value>root</env-entry-value>
